welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:7: error: not found: value ligne
		if (ligne>1) {
                    ^